完善QQ消息界面
完善QQ消息界面

--- a/20151218001-UITableViewController-QQMessageView/Resources/Plists/messages.plist
+++ b/20151218001-UITableViewController-QQMessageView/Resources/Plists/messages.plist
@@ -4,6 +4,14 @@
 <array>
 	<dict>
 		<key>text</key>
+		<string>你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设你好！我想应聘贵公司的网站建设</string>
+		<key>time</key>
+		<string>昨天 19:27</string>
+		<key>type</key>
+		<integer>0</integer>
+	</dict>
+	<dict>
+		<key>text</key>
 		<string>你好！我想应聘贵公司的网站建设</string>
 		<key>time</key>
 		<string>昨天 19:27</string>
